--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,10 +1,10 @@
 # Core code - maintainer only
-/src/ @gavrielc
-/container/ @gavrielc
-/groups/ @gavrielc
-/launchd/ @gavrielc
-/package.json @gavrielc
-/package-lock.json @gavrielc
+/src/ @v-gaurav
+/container/ @v-gaurav
+/groups/ @v-gaurav
+/launchd/ @v-gaurav
+/package.json @v-gaurav
+/package-lock.json @v-gaurav
 
 # Skills - open to contributors
 /.claude/skills/
